# gnome-online-accounts

./: README  configure.ac
data/: Makefile.am  dbus-interfaces.xml
doc/: goa-docs.xml  goa-sections.txt  goa.types
po/: POTFILES.in  bn_IN.po  ja.po  kn.po  ko.po  ta.po
src/daemon/: Makefile.am  goadaemon.c
src/goa/: goaclient.c
src/goabackend/: Makefile.am  goaexchangeprovider.c  goafacebookprovider.c  goaflickrprovider.c  goagoogleprovider.c  goaimapsmtpmodule.c  goaimapsmtpprovider.c  goaimapsmtpprovider.h  goakerberosmodule.c  goakerberosprovider.c  goakerberosprovider.h  goalogging.c  goaoauth2provider.c  goaowncloudprovider.c  goapocketprovider.c  goaprovider.c  goautils.h  goawindowsliveprovider.c  goayahoomodule.c  goayahooprovider.c  goayahooprovider.h
src/goaidentity/: Makefile.am  goaalarm.c  goaalarm.h  goaidentity.c  goaidentitymanager.c  goaidentitymanager.h  goaidentityservice.c  goaidentityutils.c  goakerberosidentity.c  goakerberosidentity.h  goakerberosidentitymanager.c
